--- a/mobil-info/mobil-tasarim-infografik.html
+++ b/mobil-info/mobil-tasarim-infografik.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>PlatinMarket Mobil Mağaza Infografik</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=windows-1254">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body bgcolor="#456b7e" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" style="color:#fff;font:14px arial;">
 	<table width="100%" border="0" cellpadding="20" cellspacing="0" bgcolor="#86cecd">
