--- a/mobil-info/mobil-tasarim-infografik.html
+++ b/mobil-info/mobil-tasarim-infografik.html
@@ -6,61 +6,61 @@
 <body bgcolor="#456b7e" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" style="color:#fff;font:14px arial;">
 	<table width="100%" border="0" cellpadding="20" cellspacing="0" bgcolor="#86cecd">
 		<tr align="center">
-			<td style="color:#456b7e;">Bu e-postayı düzgün göremiyorsanız, internet görünümü için <a href="http://www.platinmarket.com/sablonlar/mobil-info/mobil-magaza.html" target="_blank" style="color:#456b7e;"><b>tıklayın.</b></a></td>
+			<td style="color:#456b7e;">Bu e-postayı düzgün göremiyorsanız, internet görünümü için <a href="http://static.platinmarket.com/mobil-info/mobil-magaza.html" target="_blank" style="color:#456b7e;"><b>tıklayın.</b></a></td>
 		</tr>
 	</table>
 	<table border="0" cellpadding="0" cellspacing="0" align="center">
 		<tr>
 			<td align="center" colspan="2">
-				<img src="http://www.platinmarket.com/sablonlar/mobil-info/images/mobil-tasarim-infografik_13.png" width="800" height="106" />
+				<img src="http://static.platinmarket.com/mobil-info/images/mobil-tasarim-infografik_13.png" width="800" height="106" />
 			</td>
 		</tr>
 		<tr>
 			<td>
-				<img src="http://www.platinmarket.com/sablonlar/mobil-info/images/mobil-tasarim-infografik_01.png" width="393" height="612" />
+				<img src="http://static.platinmarket.com/mobil-info/images/mobil-tasarim-infografik_01.png" width="393" height="612" />
 			</td>
 			<td>
-				<img src="http://www.platinmarket.com/sablonlar/mobil-info/images/mobil-tasarim-infografik_02.png" width="407" height="612" />
-			</td>
-		</tr>
-		<tr>
-			<td>
-				<img src="http://www.platinmarket.com/sablonlar/mobil-info/images/mobil-tasarim-infografik_03.png" width="393" height="535" />
-			</td>
-			<td>
-				<img src="http://www.platinmarket.com/sablonlar/mobil-info/images/mobil-tasarim-infografik_04.png" width="407" height="535" />
+				<img src="http://static.platinmarket.com/mobil-info/images/mobil-tasarim-infografik_02.png" width="407" height="612" />
 			</td>
 		</tr>
 		<tr>
 			<td>
-				<img src="http://www.platinmarket.com/sablonlar/mobil-info/images/mobil-tasarim-infografik_05.png" width="393" height="496" />
+				<img src="http://static.platinmarket.com/mobil-info/images/mobil-tasarim-infografik_03.png" width="393" height="535" />
 			</td>
 			<td>
-				<img src="http://www.platinmarket.com/sablonlar/mobil-info/images/mobil-tasarim-infografik_06.png" width="407" height="496" />
-			</td>
-		</tr>
-		<tr>
-			<td>
-				<img src="http://www.platinmarket.com/sablonlar/mobil-info/images/mobil-tasarim-infografik_07.png" width="393" height="503" />
-			</td>
-			<td>
-				<img src="http://www.platinmarket.com/sablonlar/mobil-info/images/mobil-tasarim-infografik_08.png" width="407" height="503" />
+				<img src="http://static.platinmarket.com/mobil-info/images/mobil-tasarim-infografik_04.png" width="407" height="535" />
 			</td>
 		</tr>
 		<tr>
 			<td>
-				<img src="http://www.platinmarket.com/sablonlar/mobil-info/images/mobil-tasarim-infografik_09.png" width="393" height="502" />
+				<img src="http://static.platinmarket.com/mobil-info/images/mobil-tasarim-infografik_05.png" width="393" height="496" />
 			</td>
 			<td>
-				<img src="http://www.platinmarket.com/sablonlar/mobil-info/images/mobil-tasarim-infografik_10.png" width="407" height="502" />
+				<img src="http://static.platinmarket.com/mobil-info/images/mobil-tasarim-infografik_06.png" width="407" height="496" />
 			</td>
 		</tr>
 		<tr>
 			<td>
-				<img src="http://www.platinmarket.com/sablonlar/mobil-info/images/mobil-tasarim-infografik_11.png" width="393" height="446" />
+				<img src="http://static.platinmarket.com/mobil-info/images/mobil-tasarim-infografik_07.png" width="393" height="503" />
 			</td>
 			<td>
-				<img src="http://www.platinmarket.com/sablonlar/mobil-info/images/mobil-tasarim-infografik_12.png" width="407" height="446" />
+				<img src="http://static.platinmarket.com/mobil-info/images/mobil-tasarim-infografik_08.png" width="407" height="503" />
+			</td>
+		</tr>
+		<tr>
+			<td>
+				<img src="http://static.platinmarket.com/mobil-info/images/mobil-tasarim-infografik_09.png" width="393" height="502" />
+			</td>
+			<td>
+				<img src="http://static.platinmarket.com/mobil-info/images/mobil-tasarim-infografik_10.png" width="407" height="502" />
+			</td>
+		</tr>
+		<tr>
+			<td>
+				<img src="http://static.platinmarket.com/mobil-info/images/mobil-tasarim-infografik_11.png" width="393" height="446" />
+			</td>
+			<td>
+				<img src="http://static.platinmarket.com/mobil-info/images/mobil-tasarim-infografik_12.png" width="407" height="446" />
 			</td>
 		</tr>
 		<tr>
